--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   line-height: 34px;
   color: #777777;
   background: url("../images/dot-grid.png");
+  margin: 0;
 }
 
 * {
@@ -107,7 +108,7 @@ footer {
   text-align: center;
   background: #666666;
   border-top: 8px solid #4aaaa5;
-  height: 50px;
+  height: auto;
 }
 
 h3, h2 {
